crates/test-files/fixtures/compile_errors/name_mismatch/data_processor.rs
use std::error::Error;
use std::fs::File;
use std::io::{BufRead, BufReader};
use std::path::Path;

#[derive(Debug)]
pub struct DataRecord {
    id: u32,
    value: f64,
    category: String,
}

impl DataRecord {
    pub fn new(id: u32, value: f64, category: String) -> Result<Self, String> {
        if value < 0.0 {
            return Err("Value cannot be negative".to_string());
        }
        if category.trim().is_empty() {
            return Err("Category cannot be empty".to_string());
        }
        Ok(Self {
            id,
            value,
            category: category.trim().to_string(),
        })
    }

    pub fn calculate_tax(&self, rate: f64) -> f64 {
        self.value * rate
    }
}

pub struct DataProcessor {
    records: Vec<DataRecord>,
}

impl DataProcessor {
    pub fn new() -> Self {
        Self {
            records: Vec::new(),
        }
    }

    pub fn load_from_csv<P: AsRef<Path>>(&mut self, path: P) -> Result<usize, Box<dyn Error>> {
        let file = File::open(path)?;
        let reader = BufReader::new(file);
        let mut count = 0;

        for (line_num, line) in reader.lines().enumerate() {
            let line = line?;
            if line_num == 0 {
                continue;
            }

            let parts: Vec<&str> = line.split(',').collect();
            if parts.len() != 3 {
                continue;
            }

            let id = match parts[0].parse::<u32>() {
                Ok(val) => val,
                Err(_) => continue,
            };

            let value = match parts[1].parse::<f64>() {
                Ok(val) => val,
                Err(_) => continue,
            };

            let record = match DataRecord::new(id, value, parts[2].to_string()) {
                Ok(rec) => rec,
                Err(_) => continue,
            };

            self.records.push(record);
            count += 1;
        }

        Ok(count)
    }

    pub fn total_value(&self) -> f64 {
        self.records.iter().map(|r| r.value).sum()
    }

    pub fn average_value(&self) -> Option<f64> {
        if self.records.is_empty() {
            None
        } else {
            Some(self.total_value() / self.records.len() as f64)
        }
    }

    pub fn filter_by_category(&self, category: &str) -> Vec<&DataRecord> {
        self.records
            .iter()
            .filter(|r| r.category == category)
            .collect()
    }

    pub fn record_count(&self) -> usize {
        self.records.len()
    }
}

#[cfg(test)]
mod tests {
    use super::*;
    use std::io::Write;
    use tempfile::NamedTempFile;

    #[test]
    fn test_data_record_creation() {
        let record = DataRecord::new(1, 100.5, "Test".to_string()).unwrap();
        assert_eq!(record.id, 1);
        assert_eq!(record.value, 100.5);
        assert_eq!(record.category, "Test");
    }

    #[test]
    fn test_invalid_data_record() {
        let result = DataRecord::new(1, -10.0, "Test".to_string());
        assert!(result.is_err());
    }

    #[test]
    fn test_calculate_tax() {
        let record = DataRecord::new(1, 100.0, "Test".to_string()).unwrap();
        assert_eq!(record.calculate_tax(0.1), 10.0);
    }

    #[test]
    fn test_data_processor() {
        let mut processor = DataProcessor::new();
        assert_eq!(processor.record_count(), 0);
        assert_eq!(processor.total_value(), 0.0);
        assert!(processor.average_value().is_none());
    }

    #[test]
    fn test_load_csv() {
        let mut temp_file = NamedTempFile::new().unwrap();
        writeln!(temp_file, "id,value,category").unwrap();
        writeln!(temp_file, "1,100.5,CategoryA").unwrap();
        writeln!(temp_file, "2,200.0,CategoryB").unwrap();
        writeln!(temp_file, "invalid,data,row").unwrap();

        let mut processor = DataProcessor::new();
        let result = processor.load_from_csv(temp_file.path());
        assert!(result.is_ok());
        assert_eq!(result.unwrap(), 2);
        assert_eq!(processor.record_count(), 2);
        assert_eq!(processor.total_value(), 300.5);
        assert_eq!(processor.average_value(), Some(150.25));
    }

    #[test]
    fn test_filter_by_category() {
        let mut processor = DataProcessor::new();
        processor.records.push(
            DataRecord::new(1, 100.0, "CategoryA".to_string()).unwrap()
        );
        processor.records.push(
            DataRecord::new(2, 200.0, "CategoryB".to_string()).unwrap()
        );
        processor.records.push(
            DataRecord::new(3, 150.0, "CategoryA".to_string()).unwrap()
        );

        let filtered = processor.filter_by_category("CategoryA");
        assert_eq!(filtered.len(), 2);
        assert_eq!(filtered[0].id, 1);
        assert_eq!(filtered[1].id, 3);
    }
}
use csv::{Reader, Writer};
use serde::{Deserialize, Serialize};
use std::error::Error;
use std::fs::File;

#[derive(Debug, Deserialize, Serialize)]
struct Record {
    id: u32,
    name: String,
    value: f64,
    active: bool,
}

impl Record {
    fn is_valid(&self) -> bool {
        !self.name.is_empty() && self.value >= 0.0
    }
}

pub fn process_csv(input_path: &str, output_path: &str) -> Result<(), Box<dyn Error>> {
    let input_file = File::open(input_path)?;
    let mut reader = Reader::from_reader(input_file);
    
    let output_file = File::create(output_path)?;
    let mut writer = Writer::from_writer(output_file);
    
    let mut valid_count = 0;
    let mut invalid_count = 0;
    
    for result in reader.deserialize() {
        let record: Record = result?;
        
        if record.is_valid() {
            writer.serialize(&record)?;
            valid_count += 1;
        } else {
            invalid_count += 1;
        }
    }
    
    writer.flush()?;
    
    println!("Processing complete:");
    println!("  Valid records: {}", valid_count);
    println!("  Invalid records: {}", invalid_count);
    
    Ok(())
}

pub fn generate_sample_data() -> Result<(), Box<dyn Error>> {
    let records = vec![
        Record { id: 1, name: String::from("Item A"), value: 100.5, active: true },
        Record { id: 2, name: String::from("Item B"), value: 250.75, active: false },
        Record { id: 3, name: String::from(""), value: -50.0, active: true },
        Record { id: 4, name: String::from("Item D"), value: 300.0, active: true },
    ];
    
    let file = File::create("sample_data.csv")?;
    let mut writer = Writer::from_writer(file);
    
    for record in records {
        writer.serialize(&record)?;
    }
    
    writer.flush()?;
    println!("Sample data generated: sample_data.csv");
    
    Ok(())
}